--- a/index.html
+++ b/index.html
@@ -170,7 +170,12 @@
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis2.md">Redis 概述和安装</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis3.md">Redis 性能测试</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis4.md">Redis 基础知识</a></span>
-      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis5.md">Redis 常用命令</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis5.md">Redis 基本数据类型string</a></span>
+
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis6.md">Redis 基本数据类型list</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis7.md">Redis 基本数据类型set</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis8.md">Redis 基本数据类型map</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis9.md">Redis 基本数据类型zset</a></span>
     </div>
 
     	<h1 class="postTitle">Kafka</h1>
@@ -308,7 +313,6 @@
     <h1 class="postTitle">NIO</h1>
     <h1 class="postTitle">Netty</h1>
     <h1 class="postTitle">K8S</h1>
-    <h1 class="postTitle">Redisson</h1>
 	</div>
   </body>
 </html>
