--- a/index.html
+++ b/index.html
@@ -292,8 +292,8 @@
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/Overload和Override的区别.md">重载和复写</a></span>
 
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/jdk8与7的Map.md">jdk8与7的Map（未完）</a></span>
-      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/Api限流(待更新).md">Api限流(待更新)</a></span>
-      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/Jemter压力测试(待更新).md">Jemter压力测试(待更新)</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/Api限流.md">Api限流</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/Jemter压力测试.md">Jemter压力测试</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/hash冲突(待更新).md">hash冲突(待更新)</a></span>
 		</div>
 
