--- a/index.html
+++ b/index.html
@@ -183,11 +183,21 @@
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis13.md">Redis 事务</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis14.md">Redis Jedis</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis15.md">Redis SpringBoot集成</a></span>
+
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis16.md">Redis redis.conf配置解析</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis17.md">Redis RDB持久化</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis18.md">Redis AOF持久化</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis19.md">Redis 发布订阅</a></span>
     </div>
 
     	<h1 class="postTitle">Kafka</h1>
       <div>
         <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka1.md">Kafka 概述</a></span>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka2.md">Kafka 关键词</a></span>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka3.md">Kafka 只是消息引擎系统吗？</a></span>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka4.md">Kafka 应该选择哪种Kafka？</a></span>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka5.md">Kafka Kafka的版本号</a></span>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka6.md">Kafka Kafka线上集群部署方案怎么做？</a></span>
       </div>
 
 		<h1 class="postTitle">Docker</h1>
