--- a/index.html
+++ b/index.html
@@ -164,6 +164,12 @@
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/Mysql/mysql25.md">MySQL 易错知识点总结</a></span>
 		</div>
 
+    <h1 class="postTitle">Spring 详解</h1>
+    <div>
+
+    </div>
+
+
     <h1 class="postTitle">Redis</h1>
     <div>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis1.md">Redis NoSQL 概述</a></span>
@@ -188,6 +194,13 @@
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis17.md">Redis RDB持久化</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis18.md">Redis AOF持久化</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis19.md">Redis 发布订阅</a></span>
+
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis20.md">Redis 集群环境搭建(主从复制)</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis21.md">Redis 宕机后手动配置主机</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis22.md">Redis 哨兵模式</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis23.md">Redis 缓存穿透和雪崩</a></span>
+
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/Redisson.md">Redisson 待更新</a></span>
     </div>
 
     	<h1 class="postTitle">Kafka</h1>
@@ -330,7 +343,6 @@
     <h1 class="postTitle">NIO</h1>
     <h1 class="postTitle">Netty</h1>
     <h1 class="postTitle">K8S</h1>
-    <h1 class="postTitle">MyBatis-Plus</h1>
 	</div>
   </body>
 </html>
