--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/Mysql/mysql23.md">MySQL InnoDB引擎和Memory引擎</a></span>
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/Mysql/mysql24.md">MySQL 自增主键</a></span>
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/Mysql/mysql25.md">MySQL 易错知识点总结</a></span>
+
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/Mysql/mysql25.md">MySQL 主从复制（待更新）</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/Mysql/mysql25.md">MySQL 读写分离（待更新）</a></span>
 		</div>
 
     <h1 class="postTitle">Spring 详解</h1>
