--- a/index.html
+++ b/index.html
@@ -346,6 +346,8 @@
     <h1 class="postTitle">NIO</h1>
     <h1 class="postTitle">Netty</h1>
     <h1 class="postTitle">K8S</h1>
+    <h1 class="postTitle">JPA</h1>
+    <h1 class="postTitle">Mybatis Plus</h1>
 	</div>
   </body>
 </html>
