--- a/index.html
+++ b/index.html
@@ -214,6 +214,28 @@
         <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka4.md">Kafka 应该选择哪种Kafka？</a></span>
         <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka5.md">Kafka Kafka的版本号</a></span>
         <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka6.md">Kafka Kafka线上集群部署方案怎么做？</a></span>
+
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka7.md">Kafka kafka集群搭建</a></span>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka8.md">Kafka 集群参数配置（上）</a></span>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka9.md">Kafka 集群参数配置（下）</a></span>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka10.md">Kafka 生产者消息分区机制原理剖析</a></span>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka11.md">Kafka 生产者压缩算法</a></span>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka12.md">Kafka 无消息丢失配置</a></span>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka13.md">Kafka 客户端都有哪些不常见但是很高级的功能？</a></span>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka14.md">Kafka Java生产者是如何管理TCP连接的？</a></span>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka15.md">Kafka 幂等生产者和事务生产者是一回事吗？</a></span>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka16.md">Kafka 消费者组到底是什么？(SpringBoot集成和使用)</a></span>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka17.md">Kafka 揭开神秘的“位移主题”面纱</a></span>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka18.md">Kafka 消费者组重平衡能避免吗？</a></span>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka19.md">Kafka 位移提交那些事儿</a></span>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka20.md">Kafka CommitFailedException异常</a></span>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka21.md">Kafka </a></span>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka22.md">Kafka </a></span>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka23.md">Kafka </a></span>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka24.md">Kafka </a></span>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka25.md">Kafka </a></span>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka26.md">Kafka </a></span>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka27.md">Kafka </a></span>
       </div>
 
 		<h1 class="postTitle">Docker</h1>
@@ -330,6 +352,11 @@
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/hash冲突(待更新).md">hash冲突(待更新)</a></span>
 		</div>
 
+    <h1 class="postTitle">Canal</h1>
+    <div>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/canal/canal1.md">canal基本使用</a></span>
+    </div>
+
 		<h1 class="postTitle">持续更新中......</h1>
 		<h1 class="postTitle">Kafka</h1>
 		<h1 class="postTitle">Redis</h1>
@@ -348,6 +375,7 @@
     <h1 class="postTitle">K8S</h1>
     <h1 class="postTitle">JPA</h1>
     <h1 class="postTitle">Mybatis Plus</h1>
+    <h1 class="postTitle">Canal</h1>
 	</div>
   </body>
 </html>
